--- a/css-demos/index.html
+++ b/css-demos/index.html
@@ -22,6 +22,10 @@
     <p>sample text with external style</p>
     <p style="font-size: 2em;">sample text with external style</p>
     <p style="font-size: 72pt;">sample text with external style</p>
+    <a href="www.example.com" title="Link1">Link1</a>
+    <nav>
+    <a href="www.example.com" title="Link2">Link2</a>
+    </nav>
 </body>
 
 </html>
