--- a/css-demos/css-fundas.html
+++ b/css-demos/css-fundas.html
@@ -14,25 +14,12 @@
     <h1>HTML with CSS</h1>
     <p>CSS adds style to HTML.</p>
     <hr />
-    <a href="www.example.com" title="Link1">Link1</a>
-    <nav>
-        <a href="www.example.com" title="Link2">Link2</a>
-    </nav>
-    <h2>Some text</h2>
+
     <h3>Some more text</h3>
     <p>Yet some more text</p>
     <p class="box-model">Yet some more text</p>
+    <p class="box-model">Yet some more text</p>
+    <p>Yet some <span style="padding: 2em;">more</span> <span style="padding: 2em;">more</span>more text</p>
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
