--- a/css-demos/pcm.html
+++ b/css-demos/pcm.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Paperclip Maximiser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./pcm-styles.css">
 </head>
 
 <body>
